# xmpp

./: .clang-format  .gitignore  LICENSE  Makefile  README  README.md  c25519.c  c25519.h  cacert.inc  curve25519.c  curve25519.h  lpeg-xml.lua  main.c  omemo.c  omemo.h  project.doap  sasl.c  test.c  xmpp.c  xmpp.h
docs/: omemo.md
example/: im.c  xmpp.c  xmpp.h
example/esp-im/: CMakeLists.txt
example/esp-im/main/: CMakeLists.txt  esp-im.c
examples/: im.c  system.h
examples/esp-im/: sdkconfig
examples/esp-im/main/: CMakeLists.txt  esp-im.c  wifi.c
scripts/: prosody.cfg.lua  run
test/: Dockerfile  bot-omemo.py  cacert.inc  docker-compose.yml  generatestore.c  localhost.cnf  localhost.crt  localhost.key  omemo.c  prosody.cfg.lua  store.inc  xmpp.c
